fixed bug where expanded tasks were flowing under task below them. had nothing to do with z-index. moved height prop of 25% to the title list element and set the ul height to auto.  still buggy.

--- a/app/components/list_manager/list_manager.less
+++ b/app/components/list_manager/list_manager.less
@@ -21,10 +21,9 @@ app-list-manager {
 
         i.add-task-list {
             position: absolute;
-            bottom: -60px;
+            bottom: -53px;
             left: 78px;
             font-size: 40px;
-            z-index: 1;
             color: rgba(255, 0, 0, 0.89);
             padding: 5px;
 
@@ -43,7 +42,6 @@ app-list-manager {
         right: 30px;
         color: rgba(255, 0, 0, 0.24);
         font-size: 4em;
-        z-index: 2;
     }
     .fa-caret-up:hover,
     .fa-caret-down:hover {
