--- a/app/components/task/task.less
+++ b/app/components/task/task.less
@@ -1,7 +1,6 @@
 .task-wrapper {
     padding: 5px 20px 30px 20px;
     position: relative;
-    z-index: 0;
 }
 
 input.task-input {
