--- a/app/components/task_list/task_list.less
+++ b/app/components/task_list/task_list.less
@@ -2,7 +2,7 @@ app-task-list {
 
     ul.task-list {
 
-        height: 25%;
+        height: auto;
         width: 100%;
         margin: 0;
         padding: 0;
@@ -12,9 +12,8 @@ app-task-list {
 
         li.task-list-title {
 
-            z-index: 1;
             position: relative;
-            height: 100%;
+            height: 25%;
             width: 100%;
             background: white;
             cursor: pointer;
@@ -50,7 +49,8 @@ app-task-list {
             padding: 40px;
             background: whitesmoke;
             position: relative; 
-            z-index: 0;
+            margin-top: 4px;
+            min-height: 25%;
 
             .add-list {
                 position: absolute;
